# pyGAPS-gui

./: .build.info.md  .dev.info.md  .gitignore  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE  LICENSE.rtf  Makefile  README.md  README.rst  main.py  pyGAPS-gui.py  pyGAPS-gui.spec  pyproject.toml  requirements.txt  setup.cfg  setup.py  test.py
.github/workflows/: build_linux.yml  build_mac.yml  build_windows.yml
ci/: base_wix.wxs  collect_dist.py
docs/: conf.py  index.rst
docs/manual/: index.rst
pygapsgui/: MainWindow.py  MainWindowUI.py  SplashScreen.py  __init__.py
pygapsgui/controllers/: IsoController.py
pygapsgui/models/: AdsPropTableModel.py  AreaBETModel.py  AreaLangModel.py  DADRModel.py  IASTModel.py  IASTSVPModel.py  IASTVLEModel.py  IsoCreateModel.py  IsoDataTableModel.py  IsoModel.py  IsoModelByModel.py  IsoModelGuessModel.py  IsoModelManualModel.py  IsoPropTableModel.py  IsostericModel.py  MatPropTableModel.py  MetadataTableModel.py  PSDKernelModel.py  PSDMesoModel.py  PSDMicroModel.py  PlotAlphaSModel.py  PlotTModel.py  dfTableModel.py
pygapsgui/resources/sample_data/: AC BAX 1500 - butane - 298.json  AC BAX 1500 - butane - 348.json  MOF-5(Zn) - C2H6 - 303 - model.json  MOF-5(Zn) - C2H6 - 303.json  NaY - N2 - 77.json  SiO2 - N2 - 77.json
pygapsgui/resources/stylesheets/: colors.qss  dark.qss  light.qss
pygapsgui/utilities/: color_theme.py  log_hook.py  resources.py  result_export.py  table_to_clipboard.py
pygapsgui/views/: AdsorbateView.py  AreaBETDialog.py  AreaLangDialog.py  DADRDialog.py  GraphView.py  IASTDialog.py  IASTSVPDialog.py  IASTVLEDialog.py  ImportDialog.py  IsoCreateDialog.py  IsoEditModelDialog.py  IsoEditPointDialog.py  IsoGraphView.py  IsoListView.py  IsoModelByDialog.py  IsoModelGuessDialog.py  IsoModelManualDialog.py  IsostericDialog.py  MaterialView.py  PSDKernelDialog.py  PSDMesoDialog.py  PSDMicroDialog.py  PlotAlphaSDialog.py  PlotTDialog.py
pygapsgui/widgets/: GraphSelectorToolbar.py  IsoGraphDataSel.py  IsoGraphLegendSel.py  IsoGraphToolbar.py  IsoUnitWidget.py  MetadataEditWidget.py  RangeGenerator.py  RangeSlider.py  SciDoubleSpinbox.py  SpinBoxSlider.py  UtilityDialogs.py  UtilityWidgets.py  resources_rc.py
src/: MainWindow.py  MainWindowUI.py  SplashScreen.py  __init__.py  __init_pygaps__.py  app.py  init_pygaps.py
src/controllers/: IsoController.py  IsoListController.py  explorer_controller.py  graphcontroller.py  info_controller.py  textinfocontroller.py
src/dialogs/: BETDialog.py  DataDialog.py  LangmuirDialog.py  MainWindowUI.py  UtilityDialogs.py
src/dialogs/designer/: resources.qrc
src/models/: AdsPropTableModel.py  AreaBETModel.py  AreaLangModel.py  BETModel.py  DADRModel.py  IASTModel.py  IASTSVPModel.py  IASTVLEModel.py  IsoDataTableModel.py  IsoInfoTableModel.py  IsoListModel.py  IsoModel.py  IsoModelByModel.py  IsoModelGuessModel.py  IsoModelManualModel.py  IsoPropTableModel.py  IsostericModel.py  IsothermDataTableModel.py  IsothermListModel.py  IsothermModel.py  LangmuirModel.py  MatPropTableModel.py  MetadataTableModel.py  PSDKernelModel.py  PSDMesoModel.py  PSDMicroModel.py  PlotAlphaSModel.py  PlotTModel.py  bet_model.py  dfTableModel.py  explorer_model.py  isotherm_data_model.py  isotherm_model.py  main_model.py  mainmodel.py
src/pygapsgui/: MainWindow.py  MainWindowUI.py  __init__.py  __init_pygaps__.py  _version.py
src/pygapsgui/controllers/: IsoController.py
src/pygapsgui/models/: AreaBETModel.py  AreaLangModel.py  IASTModel.py  IASTVLEModel.py  IsoCreateModel.py  IsoListModel.py  IsoModel.py  IsoModelByModel.py  IsoModelGuessModel.py  PSDKernelModel.py  dfTableModel.py
src/pygapsgui/utilities/: color_theme.py  log_hook.py  resources.py  result_export.py  string_match.py
src/pygapsgui/views/: AreaBETDialog.py  AreaLangDialog.py  DADRDialog.py  GraphView.py  IASTDialog.py  IASTVLEDialog.py  IsoEditPointDialog.py  (+5 more)
src/utilities/: log_hook.py  result_export.py  tex2svg.py
src/views/: AdsorbateView.py  AdsorbatesView.py  AreaBETDialog.py  AreaLangDialog.py  BETDialog.py  ConsoleView.py  DADRDialog.py  ExplorerListView.py  GraphView.py  IASTDialog.py  IASTSVPDialog.py  IASTVLEDialog.py  ImportDialog.py  IsoDataDialog.py  IsoEditModelDialog.py  IsoEditPointDialog.py  IsoGraphView.py  IsoListGraphView.py  IsoListView.py  IsoModelByDialog.py  IsoModelGraphView.py  IsoModelGuessDialog.py  IsoModelManualDialog.py  IsostericDialog.py  LangmuirDialog.py  MainWindowUI.py  MaterialView.py  MaterialsView.py  PSDKernelDialog.py  PSDMesoDialog.py  PSDMicroDialog.py  PlotAlphaSDialog.py  PlotTDialog.py  RangeSlider.py  bet_dialog.py  data_dialog.py  graph_view.py  graphview.py  mainwindow.py  mainwindow.qml  (+3 more)
src/widgets/: BETDialog.py  DataDialog.py  GraphSelectorToolbar.py  ImportDialog.py  IsoGraphDataSel.py  IsoGraphToolbar.py  IsoUnitWidget.py  LangmuirDialog.py  MainWindowUI.py  MetadataEditWidget.py  MetadataTableView.py  MetadataTableWidget.py  RangeGenerator.py  RangeSlider.py  SciDoubleSpinbox.py  SpinBoxSlider.py  UtilityWidgets.py  resources_rc.py
tst/: new isotherm.aif
tst/aif/: Sample_A.aif  Sample_E.aif  UiO-66(Zr) N2 77.aif
tst/bel_xl/: Sample_C.xls  Sample_D.xls
tst/json/: AC-BAX1500 butane 325 JensenSeaton.json  AC-BAX1500 butane 350 JensenSeaton.json  AC-BAX1500 butane JensenSeaton.json  AC_ref_filter_Ar_87K_run 3_rep.json  BAX 1500 - butane - 298.json  BAX 1500 - butane - 323.json  BAX 1500 - butane - 348.json  MCM-41 N2 77.355.json  MCM-41 N2 77.json  MIL-101Cr D4 303.json  MIL-101Cr TCM 303.json  MOF-5(Zn) C2H6 303 model.json  MOF-5(Zn) C2H6 303.json  MOF-5(Zn) CH4 303 model.json  MOF-5(Zn) CH4 303.json  NaY N2 77.json  SiO2 N2 77 BET.json  SiO2 N2 77.json  Takeda 5A CO2 303 calorimetry.json  Takeda 5A CO_{2} Langmuir.json  Takeda 5A N2 77.json  Takeda 5A ch4 DSLangmuir.json  UiO-66(Zr) N2 77 TSLang.json  UiO-66(Zr) N2 77.355 kPa.json  UiO-66(Zr) N2 77.355.json  UiO-66(Zr) N2 77.json
tst/mic_xl/: Sample_A.xls
tst/qnt_rep/: 1.txt
tst/views/: test_HelpDialog.py  test_IsoGraphView.py
(+30 files in other folders)
