[metadata]
name = pygapsgui
license = AGPL
license_file = LICENSE
description = GUI for pyGAPS
author = Paul Iacomi
author_email = mail@pauliacomi.com
url = https://github.com/pauliacomi/pyGAPS-gui
# Classifier list at https://pypi.org/pypi?%3Aaction=list_classifiers
classifiers =
    License :: OSI Approved :: GNU Affero General Public License v3
    Operating System :: OS Independent
    Topic :: Scientific/Engineering
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Physics
    Topic :: Scientific/Engineering :: Chemistry
keywords =
    adsorption
    characterization
    porous materials

[options]
packages = find:
python_requires = >=3.8
install_requires =
    pyside6>=6.2.3
    qtpy>=2.0.1
    matplotlib>=3.5.0 # for QT6
    pygaps>=4.1.1
setup_requires =
    setuptools_scm
    pyinstaller >= 4.10

[options.package_data]
* = *.txt, *.rst
pygapsgui.resources = *
pygapsgui.resources.icons = *

[options.entry_points]
console_scripts =
    pygapsgui = pygapsgui:main

[options.extras_require]
build =
    pyinstaller >= 4.10

[flake8]
ignore =
	E266, # too many ###
	E402,
	W503,
	W504,
	E126
max-line-length = 200
exclude = .tox,.eggs,ci/templates,build,dist
docstring_style = numpy
