[metadata]
name = pygapsgui
license = AGPL
license_file = LICENSE
description = GUI for pyGAPS
author = Paul Iacomi
author_email = mail@pauliacomi.com
url = https://github.com/pauliacomi/pyGAPS-gui
# Classifier list at https://pypi.org/pypi?%3Aaction=list_classifiers
classifiers =
    License :: OSI Approved :: GNU Affero General Public License v3
    Operating System :: OS Independent
    Topic :: Scientific/Engineering
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Physics
    Topic :: Scientific/Engineering :: Chemistry
keywords =
    adsorption
    characterization
    porous materials

[options]
packages = find_namespace:
python_requires = >=3.8
install_requires =
    pyside6>=6.2.3,<6.4;platform_system!='Linux'
    pyside2>=5.15.0;platform_system=='Linux'
    qtpy>=2.0.1
    matplotlib>=3.5.2 # for QT6
    darkdetect>=0.7
    rapidfuzz>=2
    pygaps==4.4.2
    docutils
setup_requires =
    setuptools_scm
    pyinstaller >= 5.3

[options.package_data]
pygapsgui =
    *.txt, *.rst
pygapsgui.resources =
    *, */*, */*/*

[options.entry_points]
console_scripts =
    pygapsgui = pygapsgui:main

[options.extras_require]
build =
    pyinstaller >= 4.10
docs =
    pygments >= 2.11
    docutils >= 0.11
    doc8
    pandoc
    restructuredtext-lint
    sphinx >= 4.0
    sphinx-copybutton
    furo

[flake8]
ignore =
	E266, # too many ###
	E402,
	W503,
	W504,
	E126
max-line-length = 200
exclude = .tox,.eggs,ci/templates,build,dist
docstring_style = numpy
